[gd_scene load_steps=16 format=2]

[ext_resource path="res://flappy-bird-assets/sprites/bluebird-downflap.png" type="Texture" id=1]
[ext_resource path="res://flappy-bird-assets/sprites/bluebird-upflap.png" type="Texture" id=2]
[ext_resource path="res://flappy-bird-assets/sprites/bluebird-midflap.png" type="Texture" id=3]
[ext_resource path="res://flappy-bird-assets/sprites/redbird-upflap.png" type="Texture" id=4]
[ext_resource path="res://flappy-bird-assets/sprites/yellowbird-downflap.png" type="Texture" id=5]
[ext_resource path="res://flappy-bird-assets/sprites/redbird-midflap.png" type="Texture" id=6]
[ext_resource path="res://flappy-bird-assets/sprites/yellowbird-midflap.png" type="Texture" id=7]
[ext_resource path="res://flappy-bird-assets/sprites/yellowbird-upflap.png" type="Texture" id=8]
[ext_resource path="res://flappy-bird-assets/sprites/redbird-downflap.png" type="Texture" id=9]
[ext_resource path="res://Bird.gd" type="Script" id=10]
[ext_resource path="res://flappy-bird-assets/audio/wing.ogg" type="AudioStream" id=11]
[ext_resource path="res://flappy-bird-assets/audio/hit.ogg" type="AudioStream" id=12]
[ext_resource path="res://flappy-bird-assets/audio/die.ogg" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "blue",
"speed": 20.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 9 ) ],
"loop": true,
"name": "red",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": false,
"name": "yellow",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
height = 6.0

[node name="Bird" type="KinematicBody2D"]
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "yellow"
__meta__ = {
"_edit_lock_": true
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="AnimatedSprite"]
position = Vector2( 0, -2.38419e-07 )
scale = Vector2( 1.7, 1.2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="DieAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="HitAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -5.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="AnimatedSprite/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="viewport_exited" from="AnimatedSprite/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="finished" from="DieAudioPlayer" to="." method="_on_DieAudioPlayer_finished"]
